--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="____________" alt="foto da lizandra">
-            <h3 class="estudante-nome">Lizandra</h3>
+            <img class="estudante-imagem" src="images.jpeg" alt="foto da saia">
+            <h3 class="estudante-nome">Saia</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -54,7 +54,7 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
+            <img class="estudante-imagem" src="_______________" alt="foto da joice">
             <h3 class="estudante-nome">Joice</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
