--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="foto do shorts">
+            <img class="estudante-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
             <h3 class="estudante-nome">Shorts</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="images.jpeg" alt="foto da saia">
+            <img class="estudante-imagem" src="images.jpeg" alt="saia">
             <h3 class="estudante-nome">Saia</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
@@ -54,15 +54,15 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="_______________" alt="foto da joice">
-            <h3 class="estudante-nome">Joice</h3>
+            <img class="estudante-imagem" src="images.jpeg" alt="Blusa">
+            <h3 class="estudante-nome">Blusa</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-            <h3 class="estudante-nome">Maria</h3>
+            <img class="estudante-imagem" src="__________________" alt="calça">
+            <h3 class="estudante-nome">calça</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
