--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="__________________" alt="calça">
+            <img class="estudante-imagem" src="________________________-" alt="calça">
             <h3 class="estudante-nome">calça</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
