--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="________________________-" alt="calça">
+            <img class="estudante-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
             <h3 class="estudante-nome">calça</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
+            <img class="estudante-imagem" src="__________________" alt="Tenis feminino">
             <h3 class="estudante-nome">Olivia</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
