--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="__________________" alt="Tenis feminino">
-            <h3 class="estudante-nome">Olivia</h3>
+            <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis feminino">
+            <h3 class="estudante-nome">Tenis feminino</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -77,8 +77,8 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-            <h3 class="estudante-nome">Rafaela</h3>
+            <img class="estudante-imagem" src="___________________" alt="Macacao">
+            <h3 class="estudante-nome">Macacao</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
