--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis feminino">
+            <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis">
             <h3 class="estudante-nome">Tenis feminino</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
@@ -77,15 +77,15 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="___________________" alt="Macacao">
+            <img class="estudante-imagem" src="images (2).jpeg" alt="Macacao">
             <h3 class="estudante-nome">Macacao</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-            <h3 class="estudante-nome">Thais</h3>
+            <img class="estudante-imagem" src="__________________--" alt="Boné">
+            <h3 class="estudante-nome">Boné</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
