--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="__________________--" alt="Boné">
+            <img class="estudante-imagem" src="download (2).jpeg" alt="Boné">
             <h3 class="estudante-nome">Boné</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
@@ -94,7 +94,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="alurastart logo.png" alt="__________________">
     </footer>
 </body>
 </html>
