--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="____________________" alt="_______________">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Loja</li>
             <li class="cabecalho-lista-item">Moda Modesta</li>
