--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="____________________" alt="_______________">
+        <img class="cabecalho-imagem" src="logo-371025468-1666299929-5c9bcb325479d04988bd8cac4b22ff8b1666299930.png" alt="logo a loja">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Loja</li>
             <li class="cabecalho-lista-item">Moda Modesta</li>
@@ -94,7 +94,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="__________________">
+        <img class="rodape-imagem"src="logo-371025468-1666299929-5c9bcb325479d04988bd8cac4b22ff8b1666299930.png" alt="logo da loja">
     </footer>
 </body>
 </html>
