--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="images.jpeg" alt="Blusa">
+            <img class="estudante-imagem" src="---------------" alt="Blusa">
             <h3 class="estudante-nome">Blusa</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
