--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">A Loja foi fundada em 2010 e tem como objetivo de vender roupas.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="images (3).jpeg alt="imagem da loja">
+        <img class="escola-imagem" src="images (3).jpeg" alt="imagem da loja">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
