--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="escola-imagem" src="images (3).jpeg" alt="imagem da loja">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">Venham conhecer nossos produtos!</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
