--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
-            <h3 class="estudante-nome">calça</h3>
+            <h3 class="estudante-nome">Calça</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis">
-            <h3 class="estudante-nome">Tenis feminino</h3>
+            <h3 class="estudante-nome">Tenis</h3>
         </div>
         <span></span>
         <span></span>
