--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis">
-            <h3 class="estudante-nome">Tenis</h3>
+            <h3 class="estudante-nome">Tênis</h3>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (2).jpeg" alt="Macacao">
-            <h3 class="estudante-nome">Macacao</h3>
+            <h3 class="estudante-nome">Macacão</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download (2).jpeg" alt="Boné">
