--- a/index.html
+++ b/index.html
@@ -18,53 +18,53 @@
             <li class="cabecalho-lista-item">Moda Modesta</li>
         </ul>
     </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Loja</h2>
-            <p class="escola-texto-um">A Loja foi fundada em 2010 e tem como objetivo de vender roupas.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+    <section class="loja">
+        <div class="loja-div-conteudo">
+            <h2 class="loja-titulo">Sobre a Loja</h2>
+            <p class="loja-texto-um">A Loja foi fundada em 2010 e tem como objetivo de vender roupas.</p>
+            <p class="loja-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="images (3).jpeg" alt="imagem da loja">
+        <img class="loja-imagem" src="images (3).jpeg" alt="imagem da loja">
     </section>
-    <section class="estudante">
-        <h2 class="estudante-titulo">Venham conhecer nossos produtos!</h2>
-        <div class="estudante-todos">
+    <section class="loja">
+        <h2 class="loja-titulo">Venham conhecer nossos produtos!</h2>
+        <div class="loja-todos">
         <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="download.jpeg" alt="Vestido">
-            <h3 class="estudante-nome">Vestido</h3>
+        <div class="loja-div">
+            <img class="loja-imagem" src="download.jpeg" alt="Vestido">
+            <h3 class="loja-nome">Vestido</h3>
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
-            <h3 class="estudante-nome">Shorts</h3>
+        <div class="loja-div">
+            <img class="loja-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
+            <h3 class="loja-nome">Shorts</h3>
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="images.jpeg" alt="saia">
-            <h3 class="estudante-nome">Saia</h3>
-        </div>
-        <span></span>
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="images (1).jpeg" alt="Blusa">
-            <h3 class="estudante-nome">Blusa</h3>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
-            <h3 class="estudante-nome">Calça</h3>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis">
-            <h3 class="estudante-nome">Tênis</h3>
+        <div class="loja-div">
+            <img class="loja-imagem" src="images.jpeg" alt="saia">
+            <h3 class="loja-nome">Saia</h3>
         </div>
         <span></span>
         <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="images (2).jpeg" alt="Macacao">
-            <h3 class="estudante-nome">Macacão</h3>
+        <div class="loja-div">
+            <img class="loja-imagem" src="images (1).jpeg" alt="Blusa">
+            <h3 class="loja-nome">Blusa</h3>
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="download (2).jpeg" alt="Boné">
-            <h3 class="estudante-nome">Boné</h3>
+        <div class="loja-div">
+            <img class="loja-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
+            <h3 class="loja-nome">Calça</h3>
+        </div>
+        <div class="loja-div">
+            <img class="loja-imagem" src="download (1).jpeg" alt="Tenis">
+            <h3 class="loja-nome">Tênis</h3>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="loja-div">
+            <img class="loja-imagem" src="images (2).jpeg" alt="Macacao">
+            <h3 class="loja-nome">Macacão</h3>
+        </div>
+        <div class="loja-div">
+            <img class="loja-imagem" src="download (2).jpeg" alt="Boné">
+            <h3 class="loja-nome">Boné</h3>
         </div>
     </div>
     </section>
