--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="cabecalho-imagem" src="logo-371025468-1666299929-5c9bcb325479d04988bd8cac4b22ff8b1666299930.png" alt="logo a loja">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Loja</li>
-           <li class="cabecalho-lista-item">Moda Modesta</li>
+          <li class="cabecalho-lista-item">Moda Modesta</li>
         </ul>
     </header>
     <section class="escola">
@@ -35,69 +35,69 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Venham conhecer nossos produtos!</h2>
         <div class="estudante-todos">
-    <section class="loja">
-        <h2 class="loja-titulo">Venham conhecer nossos produtos!</h2>
-        <div class="loja-todos">
+    <section class="produto">
+        <h2 class="produto-titulo">Venham conhecer nossos produtos!</h2>
+        <div class="produto-todos">
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download.jpeg" alt="Vestido">
             <h3 class="estudante-nome">Vestido</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="download.jpeg" alt="Vestido">
-            <h3 class="loja-nome">Vestido</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="download.jpeg" alt="Vestido">
+            <h3 class="produto-nome">Vestido</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
             <h3 class="estudante-nome">Shorts</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
-            <h3 class="loja-nome">Shorts</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="a583513ca0c54cab5385e3f5c9540cd2 (1).webp" alt="shorts">
+            <h3 class="produto-nome">Shorts</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="images.jpeg" alt="saia">
             <h3 class="estudante-nome">Saia</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="images.jpeg" alt="saia">
-            <h3 class="loja-nome">Saia</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="images.jpeg" alt="saia">
+            <h3 class="produto-nome">Saia</h3>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (1).jpeg" alt="Blusa">
             <h3 class="estudante-nome">Blusa</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="images (1).jpeg" alt="Blusa">
-            <h3 class="loja-nome">Blusa</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="images (1).jpeg" alt="Blusa">
+            <h3 class="produto-nome">Blusa</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
             <h3 class="estudante-nome">Calça</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
-            <h3 class="loja-nome">Calça</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="calca-jeans-feminina-rascada-jogger-cintura-alta-elastico-na-perna.jpg" alt="calça">
+            <h3 class="produto-nome">Calça</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download (1).jpeg" alt="Tenis">
             <h3 class="estudante-nome">Tênis</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="download (1).jpeg" alt="Tenis">
-            <h3 class="loja-nome">Tênis</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="download (1).jpeg" alt="Tenis">
+            <h3 class="produto-nome">Tênis</h3>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (2).jpeg" alt="Macacao">
             <h3 class="estudante-nome">Macacão</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="images (2).jpeg" alt="Macacao">
-            <h3 class="loja-nome">Macacão</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="images (2).jpeg" alt="Macacao">
+            <h3 class="produto-nome">Macacão</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="download (2).jpeg" alt="Boné">
             <h3 class="estudante-nome">Boné</h3>
-        <div class="loja-div">
-            <img class="loja-imagem" src="download (2).jpeg" alt="Boné">
-            <h3 class="loja-nome">Boné</h3>
+        <div class="produto-div">
+            <img class="produto-imagem" src="download (2).jpeg" alt="Boné">
+            <h3 class="produto-nome">Boné</h3>
         </div>
     </div>
     </section>
