--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="loja-div-conteudo">
             <h2 class="loja-titulo">Sobre a Loja</h2>
             <p class="loja-texto-um">A Loja foi fundada em 2010 e tem como objetivo de vender roupas.</p>
-            <p class="loja-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="loja-texto-dois">Temos muitas novidades, promoções, descontos especiais, diferenciais da marca, vantagens do produto, custo-benefício, preço e dicas de como usar seu produto.!</p>
         </div>
         <img class="loja-imagem" src="images (3).jpeg" alt="imagem da loja">
     </section>
